Update to the Revisions on Data Cleaning Module

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -10,8 +10,8 @@
     "- I've also toned down a bit of the commentary. _- Gotcha._\n",
     "- Explain this code 'combine_data[combine_data.isnull().any(axis=1)]' a bit more _- Done._ \n",
     "- Explain this code 'missing_combine_data[missing_combine_data[['forty','vertical','bench_reps','broad_jump','three_cone','shuttle']].isna().sum(axis=1) >= 4]' a bit more _-Done._\n",
-    "- I must admit this module makes me a bit queasy since we are advocating doing something (imputation with a mean) that I would never do to analyze these data. _- I Understand; I just did it because of the linear regression portion but it would be good to note that its not neccesarily a great practice for datasets like this.\n",
-    "- Okay now that I see the linear regression part I feel better but we should not that the assumption of MAR is likely not met with these data but we can illustrate the missingness with it."
+    "- I must admit this module makes me a bit queasy since we are advocating doing something (imputation with a mean) that I would never do to analyze these data. _- I Understand. I will make a note of this, explaining that it's not a great practice for datasets like this._\n",
+    "- Okay now that I see the linear regression part I feel better but we should note that the assumption of MAR is likely not met with these data but we can illustrate the missingness with it. _-Done, I have made a note of why I used MAR methodology to replace the data when the data is most likely MNAR. This note is located right before the imputation section. I have also added a section explaining MNAR, MCAR and MAR near the top._"
    ]
   },
   {
@@ -150,9 +150,9 @@
     "\n",
     "- Missing Completely at Random (MCAR): This means that the data is missing for a reason that is unrelated to the study. This means there are no special reasons, that were caused by the canidates, for the missingness; it is completely independent of the study. MCAR missing data is completely independent of the observed data as well as unobserved data. For example, if a study is done on NFL players' heart rates and some of the players heart monitors are defective, that is MCAR. Any study where MCAR is present, is allowed to use the data that was not affected by said reason. In this case, the players who did not have defective heart monitors could stilll have their data examined. MCAR is generally thought to be a strong and oftern unrealistic assumption of why data is missing. There may likely need to be strong evidence of an unrelated occurance that would cause the study to be tampered with. \n",
     "\n",
-    "- Missing at Random (MAR): The data in MAR is missing due to systematical failures that are related to the observed data/study. However the unobserved data is unrelated, like MCAR. For example, in a study that takes samples from men and women, men may be more likely to report a lower depression score, which is dependent on observed data (sex). This produces bias within the results and this assumption is far more likely than MCAR. If there are known factors, such as sex in this case, it can result in unbiased results. Otherwise it can result in possibily biased or unbiased results, depending on the context. \n",
+    "- Missing at Random (MAR): The data in MAR is missing due to systematical failures that are related to the observed data/study. However the unobserved data is unrelated, like MCAR. For example, in a customer satisfaction survey, people who made smaller purchases (observed value) are less likely to complete the follow-up survey. This can produce bias within the results if not addressed properly. The assumption of MAR is far more likely than MCAR. If there are known factors, such as sex in this case, it can result in unbiased results. Otherwise it can result in possibily biased or unbiased results, depending on the context. \n",
     "\n",
-    "- Missing Not at Random (MNAR): This means that the data is missing due to systematically unobserved data. This means MNAR is the EXACT opposite of MAR; the reason of missingness among observed and unobserved values have been swapped. MNAR assumes that the reason for missingness was NOT measured by the study. Going back to the previous example, instead of giving a lower depression score, maybe more males refuse to complete the survey. This means there is missingness in the data due to a lack of data. The study would have missing results, making it hard to tell why certain answers were left out. Using this assumption, it may produce biased or unbiased results. However, it is very likely that the data could be biased since the source(s) of the missing data are unmeasured, making them hard to address."
+    "- Missing Not at Random (MNAR): This means that the data is missing due to systematically unobserved data. This means MNAR is the EXACT opposite of MAR; the reason of missingness among observed and unobserved values have been swapped. MNAR assumes that the reason for missingness was NOT measured by the study. An example of this may be a dataset containing stats of starting college players during bowl game season. There may be a lot of missing data because a lot of starters may be sitting out to prevent injury before entering the NFL draft or because they may be transferring schools. This means there is missingness in the data due to unmeasured variables/reasons. It is difficult to tell why certain answers were left out when there are no measured indicators of missingness. Using this assumption, it may produce biased or unbiased results. However, it is very likely that the data could be biased since the source(s) of the missing data are unmeasured, making them hard to address."
    ]
   },
   {
@@ -7637,6 +7637,18 @@
    "metadata": {},
    "source": [
     "The data, much like the title of this section, is now 'complete'!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a56fd00b",
+   "metadata": {},
+   "source": [
+    "### IMPORTANT NOTE: \n",
+    "\n",
+    "In conclusion, using the mean as a way of filling most of the missing values in the data assumes a lot of different things about the data. Going back to the types of missingness, we are assuming Missing at Random (MAR) here because we are filling out the data with a numerical value. In other words, we believe the missing values to be replaceable and meaningful with a numerical response, indicatating that the missingness comes from another observed value(s). Although we assumed MAR in this case, it is incorrect. This datasets missingness is best explained by MNAR since the reason for missingness is NOT indicated anywhere within the data. We can only assume it is due to reasons that are unobserved in the data such as players sitting out for injury prevention or participating in only the neccesary drills for their position. \n",
+    "\n",
+    "We only assumed MAR and used mean values to fill the missingness in this data to show you some of the functions you can use to address NA data. Ultimately when there is MNAR in the data, such as in this case, it is hard to create models and make the proper adjustments in the dataset when you have no measureable way of knowing WHY the data is missing. Data cleaning requires context and observed values to address missing data. When that information is unavailble, it is best not to use that dataset because it will produce extremely bias/skewed results."
    ]
   },
   {
