--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -9,9 +9,10 @@
     "- Let's break this first markdown into a couple of cells _- Done._\n",
     "- Make sure you mention kNN methods earlier _- Done._\n",
     "- I think there are only 12 rows in these data and that is likely to lead to some overfitting. Your description says 60 rows which would be 5 years of data, I think. _- Done; I compiled 5 years of data for training the models._\n",
-    "- Also have a categorical response that is only 8% of rows can lead to some issues. Can we make the target, made the playoffs instead? The model can be 92% accurate by just saying all of the rows will be zero.\n",
     "- For transforming and rescaling data, you should use the scaler for the training data and apply that same scaler to the test data. This avoids some possible information leakage from the training to the test data. _- Done._ \n",
-    "- When I run the logistic I don't get any 1's.  Just 0's and the probability for the first team is 0.38 of being a one. _- Done. For some reason, when creating the module it gave me a 1 but I just re-ran it and got what you did._"
+    "- When I run the logistic I don't get any 1's. Just 0's and the probability for the first team is 0.38 of being a one. _- Done. For some reason, when creating the module it gave me a 1 but I just re-ran it and got what you did._\n",
+    "\n",
+    "- Also have a categorical response that is only 8% of rows can lead to some issues. Can we make the target, made the playoffs instead? The model can be 92% accurate by just saying all of the rows will be zero. _-Agreed; I have made a seperate notebook file to do this suggestion. The file is located in this module's file on the Github. The title starts with \"PLAYOFF VERSION\". I'm doing this just so we can keep this version as a backup for now. "
    ]
   },
   {
