Update to the revisions

--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -12,7 +12,7 @@
     "- For transforming and rescaling data, you should use the scaler for the training data and apply that same scaler to the test data. This avoids some possible information leakage from the training to the test data. _- Done._ \n",
     "- When I run the logistic I don't get any 1's. Just 0's and the probability for the first team is 0.38 of being a one. _- Done. For some reason, when creating the module it gave me a 1 but I just re-ran it and got what you did._\n",
     "\n",
-    "- Also have a categorical response that is only 8% of rows can lead to some issues. Can we make the target, made the playoffs instead? The model can be 92% accurate by just saying all of the rows will be zero. _-Agreed; I have made a seperate notebook file to do this suggestion. The file is located in this module's file on the Github. The title starts with \"PLAYOFF VERSION\". I'm doing this just so we can keep this version as a backup for now. "
+    "- Also have a categorical response that is only 8% of rows can lead to some issues. Can we make the target, made the playoffs instead? The model can be 92% accurate by just saying all of the rows will be zero. _-Agreed; I have made a seperate notebook file to do this suggestion. The file is located in this module's file on the Github. The title starts with \"PLAYOFF VERSION\". I'm doing this just so we can keep this version as a backup for now._"
    ]
   },
   {
@@ -104,6 +104,7 @@
     "| PF       | Personal Fouls per game |\n",
     "| PTS      | Points scored per game |\n",
     "| CHAMPION | Did that team win the championship that year? 1 = Yes, 0 = No |\n",
+    "| PLAYOFFS | Did that team make the playoffs that year? 1 = Yes, 0 = No |\n",
     "\n",
     "</details>"
    ]
