Update to Revisions

--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -9009,7 +9009,7 @@
    "id": "17fcc951",
    "metadata": {},
    "source": [
-    "### 3.) Using the scaled data you created in question 2, predict whether a team(s) will have above 85 points per game during the 2025 WNBA season with a QDA model. Record an accuracy score. \n",
+    "### 3.) Using the scaled data you created in question 2, predict which team(s) will have above 85 points per game during the 2025 WNBA season with a QDA model. Record an accuracy score. \n",
     "\n",
     "QUICK NOTE: You can use an accuracy score in this case because there are already pts per game recorded for each team thus far. Although they are not final for the WHOLE season, this is an interesting experiment to see if these are strong predictors of whether a team will have high points per game. "
    ]
