--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -4761,7 +4761,7 @@
    "id": "cc23a6fd",
    "metadata": {},
    "source": [
-    "### 2.) Using the 2020-2024 dataset, create a list of predictor variables that include FG%, 3P%, 2P%, FT%, ORB, AST. Scale the list of predictor variables. Make sure you also scale them for the 2025 data since you will be asked to make a prediction on them later. Create a new column in the ORIGINAL 2020-2024 dataset that assesses whether a teams points ('PTS') are over 85 per game. 1 = True, 0 = False. Make this column for the ORIGINAL 2025 dataset as well. \n",
+    "### 2.) Using the 2020-2024 dataset, create a list of predictor variables that include FG%, 3P%, 2P%, FT%, ORB, AST. Scale the list of predictor variables. Make sure you also scale them for the 2025 data since you will be asked to make a prediction on them later. Create a new column in the ORIGINAL 2020-2024 dataset that assesses whether a teams points ('PTS') are over 82 per game. 1 = True, 0 = False. Make this column for the ORIGINAL 2025 dataset as well. \n",
     "\n",
     "Hint: _Use .astype(int)_ "
    ]
@@ -4771,7 +4771,7 @@
    "id": "17fcc951",
    "metadata": {},
    "source": [
-    "### 3.) Using the scaled data you created in question 2, predict whether a team(s) will have above 85 points per game during the 2025 WNBA season with a QDA model. Record an accuracy score. \n",
+    "### 3.) Using the scaled data you created in question 2, predict which team(s) will have above 82 points per game during the 2025 WNBA season with a QDA model. Record an accuracy score. \n",
     "\n",
     "QUICK NOTE: You can use an accuracy score in this case because there are already pts per game recorded for each team thus far. Although they are not final for the WHOLE season, this is an interesting experiment to see if these are strong predictors of whether a team will have high points per game. "
    ]
