--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "Comments M. Schuckers 9 Sept 2025\n",
     " - Again I love these data.\n",
-    " - Worried about timeliness of predicting 2025 results mid season.  I get the desire at the moment but not sure it will age well.  Let's update the data from the 2025 reason to get the full season results.\n",
+    " - Worried about timeliness of predicting 2025 results mid season.  I get the desire at the moment but not sure it will age well.  Let's update the data from the 2025 reason to get the full season results. - Done\n",
     " - Need to more explicitly explain what is happening with scaling and why we are doing it.  Also, we use fit_transform() on training data and tranform() on test data.  Here's why\n",
-    "[< https://towardsdatascience.com/what-and-why-behind-fit-transform-vs-transform-in-scikit-learn-78f915cf96fe/>]\n",
+    "[< https://towardsdatascience.com/what-and-why-behind-fit-transform-vs-transform-in-scikit-learn-78f915cf96fe/>] - Done. \n",
     " - Maybe go through the 19-23 train with 24 test as an example then have 19-24 train and 25 test as an exercise.\n",
-    " - Need to have some explanation of the statistics.  What is a field goal?  What is a two-point versus a three-point field goal?  (All field goals in football are 3 points)  What is a rebound?  An assist? etc.\n",
-    " - When you do 'log_predictions' explain what a zero represents and what a one represents.  I would also rename that variable 'logit_predictions' to make it clearer\n",
+    " - Need to have some explanation of the statistics.  What is a field goal?  What is a two-point versus a three-point field goal?  (All field goals in football are 3 points)  What is a rebound?  An assist? etc. - Done.\n",
+    " - When you do 'log_predictions' explain what a zero represents and what a one represents. I would also rename that variable 'logit_predictions' to make it clearer\n",
     " - logistic regression assumes a linear relationship among the log-odds of the response and the predictors\n",
     " - Comment on the numbers that go into the first accuracy score.  Also note that this is training data accuracy.\n",
     " - Be clear and explicit about the results and what they mean.\n",
@@ -192,6 +192,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "867fddf6",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Explaination of Statisitics\n",
+    "\n",
+    "Before we begin the technical aspect of this learning module, let's go over some key statistics and what they mean. \n",
+    "\n",
+    "_Field Goal_: Any type of basket made during live basketball play. Any type of basket made outside of free throws is considered a field goal. Dunks, layups, mid-range shots and three-pointers are all examples of a field goal.\n",
+    "\n",
+    "_2-point shot_: A 2 point shot is any type of field goal that counts for 2 points. These shots are made from inside the 3-point line, which is the the large line painted around a basketball net on one side of a court. 2-point shots includes dunks, layups and midrange shots.\n",
+    "\n",
+    "_3-point shot_: A 3 point shot is the reverse of a 2-point shot. It is any shot made outside of the 3-point line. If a player steps over the line during the shot, it will count as a 2-point shot. \n",
+    "\n",
+    "_Rebound_: A rebound is when a player shoots the ball, misses the shot and the same or different player catches the ball after it falls down from the rim. The player who made the rebound must maintain full control of the ball and land on the ground with possesion. \n",
+    "\n",
+    "_Assist_: An assist is made when one player passes the ball to their teammate and that teammate makes a field goal. However, the pass must directly contribute to the field goal that was made. For example, the general rules state that an assist only counts if the teammate who recieved the ball via a pass, makes the field goal in 2 dribbles or less. \n",
+    "\n",
+    "_Free throw_: A free throw is a free, unguarded shot (or 2) that was award to a player via a foul commited by the other team. Usually, free throws are awarded off of shooting fouls which occur when a player attempts to score a basket but a defender on the opposing team makes illegal contact, such as a slap on the wrist while a player is making a shot attempt. \n",
+    "\n",
+    "_Block_: A block is made when a defender swipes an offensive players shot out of the air without making illegal contact with the player who attempted the shot. \n",
+    "\n",
+    "_Steal_: A steal occurs when a defensive player cleanly swipes the ball out of an offensive players hands or when a defensive player intercepts a ball off a pass between two offensive players. \n",
+    "\n",
+    "_Turnover_: A turnover occurs when there is a steal by the defense, a travel violation by the offense (more then two steps without dribbling the ball), an offensive player stepping out of bounds, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0ea4afe",
    "metadata": {},
    "source": [
@@ -278,12 +307,32 @@
    "id": "5217ae99",
    "metadata": {},
    "source": [
-    "We need to scale the data in order to even the playing field among variables for model-making. This prevents a model from becoming too biased towards features or variables with larger numerical ranges. More will be explained about this during the KNN section of this model. "
+    "We need to scale the data in order to even the playing field among variables for model-making. This prevents a model from becoming too biased towards features or variables with larger numerical ranges. Scaling essentially standardizes the data so that all data points are rescaled so that their means are 0 and the standard deviation is 1. Although the data is rescaled, their data ranges are not distorted. The formula is the following: (x - mean) / Standard Deviation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c95b6da",
+   "metadata": {},
+   "source": [
+    "Note on fit_transform vs ()transform().\n",
+    "\n",
+    "fit_transform() scales the data as detailed above while also calculating the unique parameters of the data. These parameters will be used to scale the test set, which creates new and unique results for the model to make predictions on. This creates less biased and mroe well-rounded results. \n",
+    "\n",
+    "transform() this scales the data as detailed above, but without the fit portion of the function above. This data will be rescaled using the training set's parameters. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a93198d0",
+   "metadata": {},
+   "source": [
+    "We will use fit_transform() on the training data and transform() on the testing data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4589f737",
    "metadata": {},
    "outputs": [],
@@ -295,8 +344,8 @@
     "training_data_19_23 = scaler.fit_transform(TRAIN_WNBA_19_23_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])\n",
     "\n",
     "\n",
-    "# SCale the test data for intial model-making\n",
-    "test_data_2024 = scaler.fit_transform(TEST_WNBA_2024_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])\n",
+    "# Scale the test data for intial model-making\n",
+    "test_data_2024 = scaler.transform(TEST_WNBA_2024_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])\n",
     "\n",
     "\n",
     "# Do the same for the other training data for final model-making\n",
@@ -304,7 +353,7 @@
     "training_data_20_24 = scaler.fit_transform(TRAIN_WNBA_20_24_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])\n",
     "\n",
     "# Scale the current 2025 WNBA data for final model-making\n",
-    "test_data_2025 = scaler.fit_transform(CURRENT_WNBA_2025_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])"
+    "test_data_2025 = scaler.transform(CURRENT_WNBA_2025_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])"
    ]
   },
   {
