--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -12,11 +12,11 @@
     "[< https://towardsdatascience.com/what-and-why-behind-fit-transform-vs-transform-in-scikit-learn-78f915cf96fe/>] - Done. \n",
     " - Maybe go through the 19-23 train with 24 test as an example then have 19-24 train and 25 test as an exercise.\n",
     " - Need to have some explanation of the statistics.  What is a field goal?  What is a two-point versus a three-point field goal?  (All field goals in football are 3 points)  What is a rebound?  An assist? etc. - Done.\n",
-    " - When you do 'log_predictions' explain what a zero represents and what a one represents. I would also rename that variable 'logit_predictions' to make it clearer\n",
-    " - logistic regression assumes a linear relationship among the log-odds of the response and the predictors\n",
-    " - Comment on the numbers that go into the first accuracy score.  Also note that this is training data accuracy.\n",
+    " - When you do 'log_predictions' explain what a zero represents and what a one represents. I would also rename that variable 'logit_predictions' to make it clearer - Done.\n",
+    " - logistic regression assumes a linear relationship among the log-odds of the response and the predictors - Done.\n",
+    " - Comment on the numbers that go into the first accuracy score. Also note that this is training data accuracy. - Done.\n",
     " - Be clear and explicit about the results and what they mean.\n",
-    " - I've rounded the predicted probabilities for some of the output to help make sense of those values.  Probably should mention early on that the probabilities in each row will sum to 1.  And explain why that is.\n",
+    " - I've rounded the predicted probabilities for some of the output to help make sense of those values. Probably should mention early on that the probabilities in each row will sum to 1. And explain why that is. - Thank you for doing that, I have added a note about sumation of 1 for each row.\n",
     "\n",
     "\n",
     "Comments M. Schuckers 11 Aug 2025\n",
@@ -391,7 +391,10 @@
     "\n",
     "# Logistic Regression\n",
     "\n",
-    "Logistic Regression is a categorical model that uses probabilities to predict a binary outcome. It assumes a linear relationship between independent variables. Let's go ahead and establish a logistic model and train it with the compiled 2019-2023 data."
+    "Logistic Regression is a categorical model that uses probabilities to predict a binary outcome. A Logistic Regression model outputs log odds (logit) which range from 0 to 1. 0 means a negative/ false outcome and a 1 is a positive/ true outcome. These odds are calulcated by the following equation, p / (1-p), where p is the probability of an outcome. This essentially assesses an event's probability of success to its probability of failure in the form of a ratio. This is why we will name the predictions made by a Logisitic Regression model, \"logit_predictions\", throughout this module. When a logit outcomes from a Logistic Regression model assume a linear relationship between predictors and the response vairable.\n",
+    "\n",
+    "\n",
+    "Let's go ahead and establish a logistic model and train it with the compiled 2019-2023 data."
    ]
   },
   {
@@ -847,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "615ebe64",
    "metadata": {},
    "outputs": [
@@ -864,10 +867,10 @@
    ],
    "source": [
     "# Have the model make predictions using the 2024 WNBA data\n",
-    "log_predictions = logistic_model.predict(test_data_2024)\n",
+    "logit_predictions = logistic_model.predict(test_data_2024)\n",
     "\n",
     "# takes a look at the array of predictions\n",
-    "log_predictions"
+    "logit_predictions"
    ]
   },
   {
@@ -918,18 +921,28 @@
    "source": [
     "Looking at the output above, the probabilities in the left column are for 0, not making the playoffs, and the right column is for 1, making the playoffs. Remember, these probabilities are in a scientific notation so you can indicate where they actually are beyond the decimal point by looking at the number beyond the hyphen. We can see that the model predicted the second team in the list, the New York Liberty, to have the highest probability of making the playoffs, 0.9999, for the 2024 season. For the model to predict a team as a playoff team, the probability needs to be greater than 50%.  The third team in this list is the Indiana Fever and they have a 0.9330 probability of not making the playoffs.\n",
     "\n",
+    "Quick Note about the probabilites above. Each row adds up to one because probabilities are on a scale between zero and one. In other words, an event cannot have a negative percent chance of happening or over 100% chance of happening. An event occurs or it does'nt; the result is binary. Since the results are binary, the two must add up to 100% because one of the possible outcomes will occur. There is an 100% certainty that one of the possbile outcomes will happen, hence their probabilites add up to one.\n",
+    "\n",
     "Logistic regression assumes a linear relationship between the log odds of the probability of making the playoffs and the features we are using to make that prediction.   In this module we will not cover how to assess whether or not that relationship is linear.  "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bd9f004",
+   "metadata": {},
+   "source": [
+    "Below, we will input all of the actual/ oberserved values of which teams made the playoffs as well as the predictions made by the model. The accuracy score function will output a ratio of how may correct predictions were made by the model when compared to the actual results. Remember, this prediction and accuracy score is just for the training dataset. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6acb6043",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make accuracy score\n",
-    "accuracy_score_log = accuracy_score(TEST_WNBA_2024_Data['PLAYOFFS'], log_predictions)"
+    "accuracy_score_log = accuracy_score(TEST_WNBA_2024_Data['PLAYOFFS'], logit_predictions)"
    ]
   },
   {
@@ -949,6 +962,14 @@
    "source": [
     "# Print the accuracy score\n",
     "print(f\"Accuracy Score: {accuracy_score_log}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db263077",
+   "metadata": {},
+   "source": [
+    "The Logistic Regression model has a 91.6% accuracy for predicting the teams who made the WNBA playoffs during the 2024 seaosn."
    ]
   },
   {
@@ -3346,10 +3367,10 @@
     "logistic_model_final.fit(training_data_20_24, TRAIN_WNBA_20_24_Data['PLAYOFFS'])\n",
     "\n",
     "# Have the model make predictions using the 2025 WNBA data\n",
-    "log_predictions_final = logistic_model_final.predict(test_data_2025)\n",
+    "logit_predictions_final = logistic_model_final.predict(test_data_2025)\n",
     "\n",
     "# takes a look at the array of predictions\n",
-    "log_predictions_final"
+    "logit_predictions_final"
    ]
   },
   {
